# antelop-tracker

./: .env  Dockerfile  consumer.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start-services.sh  utils.py
core/: faust_app.py  pubsub.py  tracking_process.py
handlers/: __init__.py  on_human_detect.py
stream/: queues.py  topics.py
tests/: test_tracking_process.py
