[tool.poetry]
name = "antelope-tracker"
version = "0.1.0"
description = ""
authors = ["Duy Nguyen <ducduy.ababat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
faust-streaming = {extras = ["uvloop", "fast"], version = "^0.6.9"}
python-dotenv = "^0.19.0"
redis = "^3.5.3"
norfair = {git = "https://github.com/ducduyn31/norfair.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
